--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "micro": "^9.1.0",
+    "micro-cors": "^0.1.0",
     "node-geocoder": "^3.22.0"
   },
   "devDependencies": {
